syntax = "proto3";

package multiconnect.transfer;

message TransferStart {
  uint32 id = 1;
  uint64 total_len = 2;
}

message TransferChunk {
  uint32 id = 1;
  uint64 len = 2;
  bytes data = 3;
}

message TransferEnd {
  uint32 id = 1;
}

message TransferStatus {
  uint32 id = 1;
  Status status = 2;
}

enum Status {
  OK = 0;
  MALFORMED_PACKET = 1;
}
